# GrestelPy_G18_v0.5

./: .gitignore  README.md  SETUP.bat  hub_confirmar.txt  pyproject.toml  requirements.txt  server.py  start.bat  start.sh  to do.txt
docs/: API.md  M1.md  M6.md  Manual_Estudante.md  OE1.md  OE2.md  OE3.md  OE4.md  OE5.md  PEF_2025-26_Resumo_M3_M6_OE4.md  Relatório M6.md  SMART.md  contexto_design_hub_subtabs.md  guia_docentes.md  hub vida.md  hub_logistico_info.md  monte_carlo.md  project_tree.md  pt2030.md  to do.txt
interface/: api.js  app.jsx  charts.jsx  data.js  index.html  views.jsx
src/api/: __init__.py  constants.py  schemas.py  serializers.py  summary.py
src/api/routes/: __init__.py  assumptions.py  custom_scenarios.py  ecogres.py  hub.py  pressupostos.py  rolling.py  scenarios.py  smart.py  yaml_editor.py
src/engine/: __init__.py  config.py
src/engine/analitica/: kpis.py  rolling_forecast_mensal.py  sensitivity.py
src/engine/demonstracoes/: __init__.py  balanco.py  dfc.py  dr.py  nfm.py  rolling_forecast_mensal.py  statements.py
src/engine/financas/: financiamento.py  tesouraria_mensal.py
src/engine/financiamento/: __init__.py  financiamento.py  tesouraria.py
src/engine/fornecedores/: fornecedores.py
src/engine/inputs/: __init__.py  constants.py  custom_scenarios.py  loader.py  models.py  paths.py  yaml_io.py
tests/: conftest.py  test_api_detail.py  test_api_model.py  test_api_reconcil.py  test_api_structure.py  test_fse_mensal.py  test_fse_reconciliations.py  test_keys.py  test_kpis_contract.py  test_mensais_reconciliacao.py
(+62 files in other folders)
